# quine

./: pyproject.toml  quine.py
