[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quine"
version = "0.1.0"
description = "A stateful Python quine example."
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
# Additional setuptools configurations can go here